Update README with build and run instructions
Added detailed steps for compiling and running the BMICalculator application using IntelliJ IDEA, including artifact location and launch instructions. Also included icon credit for hamburger icons.